--- a/src/Body/Body.css
+++ b/src/Body/Body.css
@@ -5,36 +5,42 @@
   line-height: 1;
 }
 
+.container {
+  max-width: 120rem;
+  padding: 0 3.2rem;
+}
+
 .section-1 {
   padding-top: 30vh;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 0.04rem 1fr;
+  justify-content: center;
+  column-gap: 2rem;
+}
+
+.border {
+  background-color: rgb(101, 101, 101);
 }
 
 .name {
-  width: 50%;
-
-  padding-right: 1rem;
-  /* background-color: blue; */
-
+  letter-spacing: 0.1rem;
   font-weight: 400;
   font-size: 5rem;
-  letter-spacing: 0.5rem;
-
-  border-right: 0.07rem solid rgb(101, 101, 101);
-
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.links {
-  padding-left: 1rem;
-  font-size: 0.7rem;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: end;
+}
+
+.links {
+  font-size: 0.9rem;
+  font-weight: 300;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
   row-gap: 0.75rem;
 }
 
@@ -65,20 +71,24 @@
   left: 0.5rem;
 }
 
-/* 
-.like {
-  font-size: 1rem;
-  cursor: pointer;
-}
+@media (max-width: 38rem) {
+  /* .section-1 {
+    column-gap: 0.9rem;
+  }
+  .name {
+    font-size: 3rem;
+  }
 
-.stats {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  column-gap: 1rem;
-} */
+  .links {
+    font-size: 0.5rem;
+    row-gap: 0.5rem;
+  }
 
-.heart {
-  /* position: absolute; */
-  /* background-color: aqua; */
+  .link:link,
+  .link:visited {
+    padding: 0.3rem 0.6rem;
+  } */
+  html {
+    font-size: 90%;
+  }
 }
